<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<TextView 
	    android:id="@+id/txt_subject"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/none"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
	
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:layout_marginTop="10dp"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:id="@+id/txt1"
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="20dp"
        	android:text="@string/campus"/>
	    
	    <TextView
	        android:id="@+id/txt_campus"
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="20dp"
        	android:layout_below="@+id/txt1"
        	android:text="@string/none"/>
	    
	    <TextView
	        android:id="@+id/txt2"
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_centerHorizontal="true"
        	android:text="@string/from"/>
	    
	    <TextView
	        android:id="@+id/txt_from"
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_below="@+id/txt2"
        	android:layout_centerHorizontal="true"
        	android:text="@string/no_date"/>
	    
	    <TextView
	        android:id="@+id/txt3"
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginRight="20dp"
        	android:layout_alignParentRight="true"
        	android:text="@string/to"/>
	    
	    <TextView
	        android:id="@+id/txt_To"
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginRight="20dp"
        	android:layout_below="@+id/txt3"
        	android:layout_alignParentRight="true"
        	android:text="@string/no_date"/>
	    
	</RelativeLayout>
	
	<TextView 
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
	
	<TextView
	    android:id="@+id/txt_description"
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="top"
        android:singleLine="false" 
        android:lines="4"
        android:text="@string/no_description"/>
	
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="30dp"
	    android:layout_marginTop="10dp"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:id="@+id/txt4"
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="20dp"
        	android:text="@string/nbMark"/>
	    
	    <TextView
	        android:id="@+id/txt_nbMark"
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="20dp"
        	android:layout_toRightOf="@+id/txt4"
        	android:text="@string/ch0"/>
	    
	</RelativeLayout>
	
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="30dp"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:id="@+id/txt5"
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="20dp"
        	android:text="@string/spMark"/>
	    
	    <TextView
	        android:id="@+id/txt_spMark"
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="20dp"
        	android:layout_toRightOf="@+id/txt5"
        	android:text="@string/ch0"/>
	    
	</RelativeLayout>
	
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="30dp"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:id="@+id/txt6"
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="20dp"
        	android:text="@string/slMark"/>
	    
	    <TextView
	        android:id="@+id/txt_slMark"
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="20dp"
        	android:layout_toRightOf="@+id/txt6"
        	android:text="@string/ch0"/>
	    
	</RelativeLayout>
	
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="30dp"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:id="@+id/txt7"
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="20dp"
        	android:text="@string/glmark"/>
	    
	    <TextView
	        android:id="@+id/txt_glMark"
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="20dp"
        	android:layout_toRightOf="@+id/txt7"
        	android:text="@string/ch0"/>
	    
	</RelativeLayout>
	
	<!--<Button
        android:id="@+id/btnRate"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/rate_it" />-->
    
</LinearLayout>