<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >

	    <RelativeLayout
	        android:layout_width="wrap_content"
	        android:layout_height="40dp"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="20dp"
	        android:orientation="horizontal" >

	        <TextView
	            android:id="@+id/txt_booster"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="20dp"
	            android:text="@string/idbooster"
	            android:textSize="20dp" />

	        <EditText
	            android:id="@+id/id_booster"
	            android:layout_width="90dp"
	            android:layout_height="fill_parent"
	            android:layout_toRightOf="@+id/txt_booster"
	            android:hint="@string/ch1000"
	            android:maxLength="7"
	            android:inputType="number" />
	    </RelativeLayout>

	    <!-- Teacher rating -->

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="10dp"
	        android:text="@string/about_speaker"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="15dp"
	        android:text="@string/know_subject" />

	    <RatingBar
	        android:id="@+id/rate_knowledge"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_marginRight="10dp"
	        android:isIndicator="false"
	        android:numStars="5"
	        android:rating="2"
	        android:stepSize="1.0"
	        style="@style/RatingBarIntervention"/>

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:text="@string/teach_ability" />

	    <RatingBar
	        android:id="@+id/rate_ability"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_marginRight="10dp"
	        android:numStars="5"
	        android:rating="2"
	        android:stepSize="1.0" 
	        style="@style/RatingBarIntervention"/>

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:text="@string/answe_rquality" />

	    <RatingBar
	        android:id="@+id/rate_answer"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_marginRight="10dp"
	        android:numStars="5"
	        android:rating="2"
	        android:stepSize="1.0" 
	        style="@style/RatingBarIntervention"/>

	    <!-- Slide rating -->

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="20dp"
	        android:text="@string/about_slide"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:text="@string/content_rich" />

	    <RatingBar
	        android:id="@+id/rate_content"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_marginRight="10dp"
	        android:isIndicator="false"
	        android:numStars="5"
	        android:rating="2"
	        android:stepSize="1.0" 
	        style="@style/RatingBarIntervention"/>

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:text="@string/format_layout" />

	    <RatingBar
	        android:id="@+id/rate_format"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_marginRight="10dp"
	        android:numStars="5"
	        android:rating="2"
	        android:stepSize="1.0" 
	        style="@style/RatingBarIntervention"/>

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:text="@string/examples" />

	    <RatingBar
	        android:id="@+id/rate_example"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_marginRight="10dp"
	        android:numStars="5"
	        android:rating="2"
	        android:stepSize="1.0" 
	        style="@style/RatingBarIntervention"/>

	    <EditText
	        android:id="@+id/rate_comments"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:layout_marginTop="10dp"
	        android:gravity="top"
	        android:hint="@string/comment"
	        android:singleLine="false"
	        android:lines="3"
	        android:inputType="textMultiLine"/>

	    <Button
	        android:id="@+id/submit"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="75dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginBottom="10dp"
	        android:layout_marginTop="10dp"
	        android:text="@string/submit" />
	</LinearLayout>

</ScrollView>